Fixed use of api key, now it is on env variable

--- a/failure.html
+++ b/failure.html
@@ -12,7 +12,7 @@
       crossorigin="anonymous"
     />
 
-    <title>Successfully subscribed!</title>
+    <title>Failure</title>
   </head>
   <body>
     <div class="jumbotron">
